--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-comments-section": "^2.0.10",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-responsive-carousel": "^3.2.23",
