--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dayjs": "^1.11.9",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-comments-section": "^2.0.10",
